Fix comment regarding FFDH vs ECDH

--- a/spec13/03Terms.tex
+++ b/spec13/03Terms.tex
@@ -78,7 +78,7 @@
 группы конечного поля, либо группа точек эллиптической кривой.
 %
 Редакции протокола, в которых используются группы первого типа, принято снабжать
-аббревиатурой EC (elliptic curve), второго~--- аббревиатурой FF (finite field).
+аббревиатурой FF (finite field), второго~--- аббревиатурой EC (elliptic curve).
 %
 В настоящем стандарте группы различных типов не дифференцируются и аббревиатуры 
 не используются.
