--- a/spec13/063Ext.tex
+++ b/spec13/063Ext.tex
@@ -1065,9 +1065,9 @@ struct {
 таблицу~\ref{Table.HS.Exts}), если таковой имеется.
 \end{itemize}
 %
-Если какая-либо из проверок завершена с ошибкой, то сервер должен пропустить ранние 
-прикладные данные клиента по правилам, заданным выше, переходя таким образом 
-к 1-RTT или 2-RTT.
+Если какая-либо из проверок завершена с ошибкой, то сервер должен пропустить 
+ранние прикладные данные клиента по правилам, заданным выше, переходя таким 
+образом к 1-RTT или 2-RTT.
 
 % use: https://www.rfc-editor.org/errata/eid6138
 
@@ -1099,11 +1099,13 @@ struct {
 При использовании механизма 0-RTT клиенту разрешается передавать ранние
 прикладные данные вплоть до сообщения \token[HS.F]{Finished} от сервера
 (см.~\ref{HS.EOED}). После получения \token[HS.F]{Finished} клиент отправляет
-сообщение \token[HS.EOED]{EndOfEarlyData} и стороны переходят к завершению Handshake.
-Чтобы избежать взаимной блокировки, сервер после приема \token[HS.CH]{ClientHello} должен
-сразу же отправлять свою очередь сообщений, включая \token[HS.SH]{ServerHello}
-с расширением \token{early_data}, не дожидаясь сообщения 
-\token[HS.EOED]{EndOfEarlyData} от клиента.
+сообщение \token[HS.EOED]{EndOfEarlyData} и стороны переходят к завершению
+Handshake. Чтобы избежать взаимной блокировки, сервер после приема
+\token[HS.CH]{ClientHello} должен сразу же отправлять свою очередь сообщений,
+включая \token[HS.SH]{ServerHello} с расширением \token{early_data}, не
+дожидаясь сообщения \token[HS.EOED]{EndOfEarlyData} от клиента.
+
+% info: 4.2.11.3
 
 Если сервер отклоняет \token{early_data}, то клиент может повторить отправку 
 ранних прикладных данных, только теперь на обычной стадии~--- по завершении 
