--- a/spec13/067Post.tex
+++ b/spec13/067Post.tex
@@ -198,7 +198,7 @@ Handshake, но и по его завершении.
 сообщениями других типов.
 
 Сообщение \token[HS.CR]{CertificateRequest} и ответные сообщения клиента
-защищаются на ключах, построенных \code{server_application_traffic_secret}
+защищаются на ключах, построенных по \code{server_application_traffic_secret}
 и \code{client_application_traffic_secret} соответственно
 (см.~\ref{CRYPTO.Schedule}). 
 
