--- a/spec13/092Transcr.tex
+++ b/spec13/092Transcr.tex
@@ -10,7 +10,7 @@
 &\code{ClientHello}, \code{HelloRetryRequest}, \code{ClientHello}_2, 
 \code{ServerHello},\code{EncryptedExtensions},\\ 
 %
-&\hspace{12pt}\code{CertificateRequest}_S, \code{Certificate}_S, 
+&\hspace{12pt}\code{CertificateRequest}, \code{Certificate}_S, 
 \code{CertificateVerify}_S, \code{Finished}_S,\\
 %
 &\hspace{12pt}\code{EndOfEarlyData}, \code{Certificate}_C, 
