--- a/spec13/097Auth.tex
+++ b/spec13/097Auth.tex
@@ -72,7 +72,7 @@ $\code{Transcript-Hash}(\code{ClientHello},\ldots,\code{Certificate})$,
 \hline
 Сервер 
   & $\code|EncryptedExtensions|$ & \code|server_handshake_traffic_secret|\\
-  & $\code|CertificateRequest|_S$ & \\
+  & $\code|CertificateRequest|$ & \\
 \hline
 Клиент
   & $\code|Finished|_S$ & \code|client_handshake_traffic_secret|\\
