Fix typos in btls13

--- a/spec13/03Terms.tex
+++ b/spec13/03Terms.tex
@@ -74,7 +74,7 @@
 
 \begin{note}
 В протоколе Диффи~--- Хеллмана используется конечная циклическая группа большого
-(как правило простого) порядка. Обычно это либо подгруппа мультипликативной
+(как правило, простого) порядка. Обычно это либо подгруппа мультипликативной
 группы конечного поля, либо группа точек эллиптической кривой.
 %
 Редакции протокола, в которых используются группы первого типа, принято снабжать
