--- a/spec13/053Phases.tex
+++ b/spec13/053Phases.tex
@@ -107,9 +107,8 @@ Handshake и может переходить к отправке данных п
 взаимодействует с еще неаутентифицированным клиентом.
 
 Еще одним способом ускорения TLS является отправка клиентом прикладных данных до
-завершения Handshake, т.~е. до отправки собственного сообщения
-сообщения~\token[HS.F]{Finished}. Этот способ описан в
-п.~\ref{COMMON.ZeroRTT}.
+завершения Handshake, т.~е. до отправки собственного 
+сообщения~\token[HS.F]{Finished}. Этот способ описан в п.~\ref{COMMON.ZeroRTT}. 
 
 В TLS предусмотрена возможность отправки некоторых сообщений после Handshake. 
 С их помощью выпускаются билеты, выполняется отложенная аутентификация, 
