--- a/spec13/067Post.tex
+++ b/spec13/067Post.tex
@@ -112,6 +112,7 @@ struct {
 \code{ticket_nonce}~--- синхропосылка. Синхропосылки текущего соединения не 
 должны повторяться;
 
+\item
 \code{ticket}~--- билет. Выступает в роли идентификатор ассоциированного PSK. 
 Билетом может быть ключ базы данных или (аутентифицированный) шифртекст, 
 который проверяется при получении;
@@ -119,6 +120,7 @@ struct {
 % info: https://mailarchive.ietf.org/arch/msg/tls/2TGQGMbdjArgmG41gnb9LJ3W_TU/
 % info: https://datatracker.ietf.org/doc/html/rfc5077#section-4
 
+\item
 \code{extensions}~--- перечень расширений. Клиент должен игнорировать 
 нераспознанные расширения.
 \end{itemize}
@@ -163,10 +165,9 @@ struct {
 % todo: security?
 
 \begin{note}
-Сформировав один раз общие общие ключи, сервер может продлевать 
-время их жизни, последовательно выпуская новые и новые билеты. 
-Рекомендуется контролировать и ограничивать время жизни такого ключевого 
-материала. 
+Сформировав один раз общие ключи, сервер может продлевать время их жизни, 
+последовательно выпуская новые и новые билеты. Рекомендуется контролировать и 
+ограничивать время жизни такого ключевого материала. 
 %
 В частности, если первоначальные ключи построены с использованием сертификатов, 
 то при контроле следует учитывать срок действия сертификатов,  
