--- a/spec13/081Alerts.tex
+++ b/spec13/081Alerts.tex
@@ -1,4 +1,4 @@
-\subsection{Оповещения}\label{ALERT.Alerts}
+\section{Оповещения}\label{ALERT.Alerts}
 
 Протокол Alert предназначен для информирования о закрытии соединения и об
 ошибках. Сообщения Alert, называемые оповещениями, защищаются, как и другие
