--- a/spec13/03Terms.tex
+++ b/spec13/03Terms.tex
@@ -42,7 +42,7 @@
 алгоритмов электронной цифровой подписи и предварительно согласованных 
 секретов, режим формирования общих ключей.
 
-{\bf \thedefctr~предварительно согласованый секрет; PSK (pre-shared secret)}:
+{\bf \thedefctr~предварительно согласованный секрет; PSK (pre-shared secret)}:
 Секрет, согласованный сторонами до установки соединения: за пределами TLS или в 
 предыдущем соединении.
 
@@ -100,7 +100,7 @@
 часть протокола TLS. 
 
 {\bf \thedefctr~расширение (extension)}:
-Стуктура данных, которая входит в сообщение Handshake и служит для 
+Структура данных, которая входит в сообщение Handshake и служит для 
 согласования параметров, обмена ключевым материалом, аутентификации.
 
 {\bf \thedefctr~сервер (server)}:
