--- a/spec13/097Auth.tex
+++ b/spec13/097Auth.tex
@@ -34,7 +34,7 @@ $\code{Transcript-Hash}(\code{ClientHello},\ldots,\code{Certificate})$,
 
 \begin{note*}
 Выбранный формат подписываемых данных защищает от угроз для сервера, который
-поддерживает соединения TLS 1.2, используя тот же сертификат и соотвественно
+поддерживает соединения TLS 1.2, используя тот же сертификат и соответственно
 личный ключ. При выборе в TLS 1.2 режима DHE сервер подписывает и отправляет в
 сообщении \code{ServerKeyExhchange} данные, начальные 32 байта которых 
 контролирует клиент.
