--- a/spec13/00Title.tex
+++ b/spec13/00Title.tex
@@ -1,12 +1,9 @@
 \thispagestyle{empty}
 
 \noindent
-\begin{tabular}{lcr}
-{\bf ГОСУДАРСТВЕННЫЙ СТАНДАРТ}  & \hspace{3.6cm}   & 
-{\bf \draftlogo}\\
-{\bf РЕСПУБЛИКИ~БЕЛАРУСЬ} & \\
-\end{tabular}
-
+{\bf ГОСУДАРСТВЕННЫЙ СТАНДАРТ} \hfill {\bf\draftlogo}\\
+\noindent
+{\bf РЕСПУБЛИКИ~БЕЛАРУСЬ}\\[-9pt]
 \hrule height 1pt
 \vskip0.4mm
 \hrule height 2pt
