--- a/spec13/_body.tex
+++ b/spec13/_body.tex
@@ -1,4 +1,4 @@
-\def\draftlogo{\scshape\small СТБ 34.101.btls13}
+\def\draftlogo{\scshape\small СТБ 34.101.90}
 
 \pagestyle{myheadings}
 \input{00Title}
