Process comments from TLS WG

--- a/spec13/03Terms.tex
+++ b/spec13/03Terms.tex
@@ -59,7 +59,7 @@
 подлинности данных, передаваемых между сторонами на транспортном
 коммуникационном уровне.
 
-\doubt{\bf \thedefctr~протокол Диффи~--- Хеллмана}:
+{\bf \thedefctr~протокол Диффи~--- Хеллмана}:
 Криптографический протокол, с помощью которого две стороны формируют 
 общий секретный ключ, используя циклическую группу, обмениваясь открытыми 
 ключами, элементами этой группы, и держа в секрете соответствующие личные 
