--- a/spec13/04Defs.tex
+++ b/spec13/04Defs.tex
@@ -25,11 +25,12 @@ RTT (round-trip time)~--- цикл приема-передачи данных в
 заданных в~\cite{RFC4506}.
 
 Для описания преобразований двоичных слов используются обозначения, введенные в 
-СТБ 34.101.31. 
+СТБ 34.101.31.
 %
 Октеты двоичного слова могут кодироваться графическими символами базовой таблицы 
 КОИ-7 (ASCII), определенной в ГОСТ~27463 и представленной в СТБ 34.101.47. 
-Полученная в результате кодирования строка символов окаймляется двойными кавычками. 
+Полученная в результате кодирования строка символов окаймляется двойными 
+кавычками.  
 %
 Например, строка \str{tls13 } является кодовым представлением двоичного 
 слова $\hex{746C73313320}$.
