--- a/spec13/054Retry.tex
+++ b/spec13/054Retry.tex
@@ -24,7 +24,7 @@
 \token[HS.HRR]{HelloRetryRequest} и клиент использует ее в
 повторном~\token[HS.CH]{ClientHello}.
 
-При перезапуске Handshake может выполняться другие корректировки
+При перезапуске Handshake могут выполняться другие корректировки
 \token[HS.CH]{ClientHello} (см.~\ref{HS.CH}).
 
 При перезапуске первое сообщение~\token[HS.CH]{ClientHello} и
