--- a/spec13/067Post.tex
+++ b/spec13/067Post.tex
@@ -44,7 +44,7 @@
 
 При использовании расширения \token[HS.Ext.sn]{server_name} клиенту
 не следует возобновлять связь, если билет был согласован в соединении с именем 
-сервера, которое отличается от текущего имена. 
+сервера, которое отличается от текущего имени.
 %
 % skip: The latter is a performance optimization: normally, there is no reason 
 % to expect that different servers covered by a single certificate would be 
