--- a/spec13/073Enc.tex
+++ b/spec13/073Enc.tex
@@ -104,7 +104,7 @@ Handshake, поле является избыточным.
 Используется ключ \code{client_write_key} или \code{server_write_key}, который 
 определяется по правилам, заданным в~\ref{CRYPTO.TKeys}. Если 
 отправителем записи является клиент, то используется ключ 
-\code{client_write_key}, если сервер~--- ключ \code{server_write_iv}.
+\code{client_write_key}, если сервер~--- ключ \code{server_write_key}.
 %
 Синхропосылка строится по правилам, заданным в~\ref{RECORD.Nonce}.
 
