--- a/spec13/075Pad.tex
+++ b/spec13/075Pad.tex
@@ -9,7 +9,7 @@
 условия установки дополнения и число дополнительных нулей. Дополнение не 
 является обязательным механизмом.
 
-Дополнительные байты записывается в поле \code{zeros} структуры 
+Дополнительные байты записываются в поле \code{zeros} структуры 
 \code{TLSInnerPlaintext}. Дополнительные байты должны быть нулевыми.
 
 Дополнение снимается после снятия защиты с \code{TLSInnerPlaintext}. 
@@ -26,6 +26,6 @@
 Если максимальный размер \code{TLSInnerPlaintext} уменьшается, например, через 
 расширение \token[HS.Ext.mfl]{max_fragment_length} (см. 
 таблицу~\ref{Table.HS.Exts}), то ограничение на размер должно продолжать 
-учитывать дополнение. 
+учитывать дополнение.
 
 % diff: в [RFC8446] речь идет о расширении `record_size_limit` из [RFC8449]
