Fix ref to the server_name extension

--- a/spec13/065Auth.tex
+++ b/spec13/065Auth.tex
@@ -169,8 +169,8 @@ DER-код контейнера \code{SubjectPublicKeyInfo} (см.~\ref{HS.Ext.L
 
 \item
 если сервер может использовать расширение \token{server_name} 
-(см.~\ref{HS.Ext.sn}) при выборе своего сертификата, то клиенту следует 
-высылать это расширение.
+(см. таблицу~\ref{Table.HS.Exts}) при выборе своего сертификата, то клиенту 
+следует высылать это расширение.
 \end{itemize}
 
 % use: https://www.rfc-editor.org/errata/eid6139
