--- a/spec13/051Purpose.tex
+++ b/spec13/051Purpose.tex
@@ -32,7 +32,8 @@ TLS встраивается в стек коммуникационных про
 Протокол TLS предыдущей версии 1.2 установлен в СТБ 34.101.65. 
 %
 Настоящий стандарт не отменяет СТБ~34.101.65~--- оба стандарта, как и 
-соответствующие версии TLS, могут применяться одновременно. 
+соответствующие версии TLS, могут применяться одновременно независимо друг от 
+друга.
 
 % skip: \begin{note*}
 % Настоящий стандарт выполнен в виде отдельного от СТБ~34.101.65 нормативного 
