Make TLS_BASH_PRG_AE2561_BASH256 mandatory

--- a/spec13/93BSuites.tex
+++ b/spec13/93BSuites.tex
@@ -30,6 +30,8 @@
 Алгоритмы определены в СТБ 34.101.77.
 \end{enumerate}
 
+Криптонабор \code|TLS_BASH_PRG_AE2561_BASH256| обязателен к реализации.
+
 \begin{table}[h]
 \caption{Криптонаборы}\label{Table.BSUITES.Suites}
 \begin{tabular}{|l|c|c|}
