Add text on tracking prevention

--- a/spec13/067Post.tex
+++ b/spec13/067Post.tex
@@ -63,6 +63,18 @@
 % skip: Note that if a server implementation declines all PSK identities with 
 % different SNI values, these two values are always the same.
 
+Клиенту не следует использовать один и тот же билет в нескольких соединениях,
+поскольку повтор билета позволяет сопоставить соединения друг с другом.
+%
+Если сервер выпускает билеты, то их число должно быть не меньше, чем 
+планируемое количество соединений с клиентом.
+%
+Серверу следует выпускать билеты в каждом соединении. Это дает клиенту 
+возможность использовать свежий билет всякий раз при открытии нового 
+соединения.
+
+% info: https://datatracker.ietf.org/doc/html/rfc8446#appendix-C.4
+
 Формат сообщения \token{NewSessionTicket} определяется одноименным типом:
 %
 \begin{codeblock}
